--- a/Project.toml
+++ b/Project.toml
@@ -1,3 +1,9 @@
+name = "SpectralSOS"
+uuid = "81dcee21-c6a6-49fa-9512-b5883dcfacb3"
+authors = ["maihoanganh <maihoanganh6@gmail.com>"]
+version = "0.1.0"
+
+
 [deps]
 Arpack = "7d9fca2a-8960-54d3-9f78-7d1dccf2cb97"
 Compat = "34da2185-b29b-5c13-b0c7-acf172513d20"
